src/style.css
@import url("https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,96,468,79,-203,738,514,712&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:wght@700&display=swap");
@import "tailwindcss";

@theme {
  --color-bg-dark: hsl(222, 100%, 2%);
  --color-bg: hsl(208, 100%, 7%);
  --color-bg-db-light: hsl(207, 23%, 23%);
  --color-bg-light: hsl(201, 100%, 11%);

  --color-text: hsl(0, 0%, 95%);
  --color-text-muted: hsl(0, 0%, 62%);

  --color-highlight: hsl(194, 100%, 19%);
  --color-border: hsl(197, 100%, 11%);
  --color-border-muted: hsl(201, 100%, 6%);

  --color-primary: hsl(108, 81%, 57%);
  --color-secondary: hsl(279, 82%, 77%);

  --color-danger: hsl(8, 79%, 66%);
  --color-warning: hsl(54, 100%, 31%);
  --color-success: hsl(156, 68%, 43%);
  --color-info: hsl(217, 94%, 69%);

  --breakpoint-xll: 120rem;

  --text-3_5xl: 2rem;

  --text-body-font: clamp(var(--text-xl), 0.75vw + 1rem, var(--text-4xl));
  --text-sec-title-font: clamp(
    var(--text-4xl),
    2.5vw + 1rem,
    var(--text-5xl)
  ); /* TBD */
  --text-sub-title-font: clamp(
    var(--text-xl),
    1.5625vw + 1rem,
    var(--text-3xl)
  ); /* TBD */

  --font-inclusive-sans: "Inclusive Sans", sans-serif;
  --font-roboto-mono: "Roboto Mono", monospace;
  --font-quicksand: "Quicksand", sans-serif;
  --font-courier: "Courier Prime", monospace;
}

/*// TODO - Remove font-size attributes */

@layer components {
  .font-roboto-flex {
    /* Change name to .font-roboto-flex */
    font-family: "Roboto Flex", sans-serif;
    font-variation-settings:
      "slnt" 0,
      "wdth" 100,
      "GRAD" 0,
      "XOPQ" 96,
      "XTRA" 468,
      "YOPQ" 79,
      "YTAS" 750,
      "YTDE" -203,
      "YTFI" 738,
      "YTLC" 514,
      "YTUC" 712;
  }
}

/* To be kept or removed. */
::selection {
  background-color: var(--color-primary);
  color: var(--color-text);
}

